--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong
-                    class="titulo-destaque">com um Front-end de qualidade!
+                    class="titulo-destaque">com um desenvolvimento de qualidade!
                 </strong></h1>
             <p class="apresentacao__conteudo__texto">Olá! Sou Pedro Moreto, desenvolvedor com especialidade em Java, C#,
-                JavaScript, HTML e CSS. Ajudo
-                pequenos
-                negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+                JavaScript, HTML e CSS. Minha paixão é criar soluções eficientes e inovadoras. Estou pronto para
+                enfrentar desafios e contribuir para o sucesso do seu projeto. Vamos transformar ideias em realidade,
+                linha por linha de código.</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__links__link" href="https://www.linkedin.com/in/pedro-moreto/">
