--- a/about.html
+++ b/about.html
@@ -18,18 +18,22 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-            <p class="apresentacao__conteudo__texto">At vero eos et accusamus et iusto odio dignissimos ducimus qui
-                blanditiis praesentium voluptatum deleniti
-                atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
-                similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
-            <p class="apresentacao__conteudo__texto">Et harum quidem rerum facilis est et expedita distinctio. Nam
-                libero tempore, cum soluta nobis est
-                eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas
-                assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum
-                necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum
-                rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut
-                perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat
-                cupidatat non.</p>
+            <p class="apresentacao__conteudo__texto">Meu nome é Pedro, e aos 30 anos, estou embarcando em uma
+                jornada de transição de carreira para o mundo da programação. Minha trajetória
+                profissional começou no atendimento, onde desenvolvi habilidades de comunicação e resolução de
+                problemas. Em seguida, mergulhei no universo do suporte técnico, aprimorando minha compreensão técnica e
+                a capacidade de lidar com desafios complexos. Minha experiência se expandiu para a edição de vídeo, onde
+                tive a oportunidade de combinar criatividade e habilidades técnicas. No entanto, meu verdadeiro chamado
+                sempre foi a tecnologia, especialmente o campo da programação. Atualmente, estou dedicando meu
+                tempo ao estudo, cursando bacharelado em Engenharia de Software, cursos técnicos especializados e
+                Bootcamps.</p>
+            <p class="apresentacao__conteudo__texto">O fascínio pela tecnologia, alimentado desde sempre, tem como
+                destaque minha paixão por jogos. Agora, estou comprometido em transformar esse amor em uma carreira.
+                Estou animado por ter a oportunidade de perseguir meus sonhos e, como parte desse compromisso, estou
+                determinado a dar o meu melhor. Acredito que cada experiência anterior contribui para a minha jornada na
+                programação, trazendo uma perspectiva única e habilidades complementares. Estou ansioso para aplicar meu
+                conjunto diversificado de habilidades em projetos inovadores e desafiadores. Vamos construir o futuro
+                juntos, com códigos e sonhos entrelaçados.</p>
         </section>
         <img class="foto" src="./assets/Foto-Pedro.png" alt="Foto Pedro">
     </main>
